# goIt-python-web-07

./: config.ini  my_select.py  pyproject.toml
migrations/versions/: 055e6b752203_init.py  144a2c8cf4bb_init.py
src/: models.py
